tests/parser/bad/exps/exp_t-lbrace-spid-colon-hexlit-semicolon-with.scilexp
let a = Uint128 1 in
(* Extra semicolon*)
{_tag: ""; _recipient:0x1234567890123456789012345678901234567890; _amount: a;}
